--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>LuoKing</title>
   </head>
   <body>
+  <div id="script_portal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
